# df-ops

./: pyproject.toml
df_ops/: __main__.py
wit/: df-ops.wit
